--- a/DevJ130.Lab3/nbproject/project.properties
+++ b/DevJ130.Lab3/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=devj130_lab3.main
+main.class=devj130_lab3.FileSender
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
